Added additional config

--- a/default.conf
+++ b/default.conf
@@ -2,26 +2,21 @@ server {
     server_name www.jomarquez.science;
     return 301 $scheme://jomarquez.science$request_uri;
 }
-
 server {
-    listen       80;
-    server_name  jomarquez.science;
-
-    #charset koi8-r;
-    access_log  /var/log/nginx/log/host.access.log  main;
-
-    location /blog {
-        root   /usr/share/nginx/html;
-        index  blog.html blog.htm;
-    }
-
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
+    server_name www.marquezglass.com;
+    return 301 $scheme://marquezglass.com$request_uri;
+}
+server {
+    listen 80;
+    server_name jomarquez.science;
+    access_log /var/log/nginx/log/jo.log main;
+    root   /usr/share/nginx/html/personal-site/static;
+    index  index.html index.htm;
+}
+server {
+    listen 80;
+    server_name marquezglass.com;
+    access_log /var/log/nginx/log/marquezglass.log main;
+    root   /usr/share/nginx/html/marquez-glass/static;
+    index  index.html index.htm;
 }
